Scripts/hello-world/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - name: http-web
      protocol: TCP
      port: 80
      targetPort: 80
    - name: http-metrics
      protocol: TCP
      port: 9762
      targetPort: 9762
