Scripts/hello-world/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
spec:
  gateways:
    - neon-ingress/neoncluster-gateway
  hosts:
    - hello-world.c437bbc593d8d4da.neoncluster.io
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: hello-world.default.svc.cluster.local
            port:
              number: 80
